fix: align items on home

--- a/packages/theme/src/theme/components/home-banner/index.module.scss
+++ b/packages/theme/src/theme/components/home-banner/index.module.scss
@@ -13,6 +13,7 @@
   align-items: center;
   position: relative;
   overflow: hidden;
+  max-width: 72rem;
 }
 
 .logo {
